crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_merge_pairs.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "PairedEnd"
    ],
    "kind": "PairedEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Retention"
    ],
    "invariants": [
      "reads_merged + reads_unmerged <= min(reads_r1, reads_r2)",
      "merge_rate in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "Merge produces merged/unmerged reads from pairs."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "Merged",
    "possible_kinds": [
      "Merged",
      "PairedEnd"
    ]
  },
  "retention": {
    "definition": "reads_merged + reads_unmerged <= min(reads_r1, reads_r2)",
    "may_drop": [
      "reads",
      "pairs",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": false,
    "preserves": [
      "pairing_metadata"
    ],
    "units": "reads,pairs,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.merge_pairs",
  "tool_ids": [
    "adapterremoval",
    "pear",
    "vsearch",
    "bbmerge",
    "flash2",
    "leehom"
  ]
}
