crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_polyg_tailing.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {},
  "outputs": {
    "emits_fastq": true,
    "kind": "SingleEnd"
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "read_order",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.polyg_tailing",
  "tool_ids": [
    "fastp",
    "bbduk"
  ]
}
