crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_primer_normalization.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "amplicon_semantics": {
    "orientation_policy": "normalize_to_primer_forward_orientation",
    "primer_assumptions": [
      "primer_set_declared",
      "primer_match_confidence>=0.9"
    ]
  },
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {},
  "outputs": {
    "emits_fastq": true,
    "kind": "SingleEnd"
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "read_order",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.primer_normalization",
  "tool_ids": [
    "cutadapt",
    "seqkit"
  ]
}
