crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_profile_overrepresented_sequences.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "SingleEnd",
      "PairedEnd",
      "Merged"
    ],
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Composition"
    ],
    "invariants": [
      "sequence_count >= 0",
      "top_fraction in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "Overrepresented sequence profiling is report-only and captures dominant repeated sequence content without mutating reads."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly",
    "possible_kinds": [
      "StatsOnly"
    ]
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.profile_overrepresented_sequences",
  "tool_ids": [
    "fastqc",
    "seqkit"
  ]
}
