crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_profile_read_lengths.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "SingleEnd",
      "PairedEnd",
      "Merged"
    ],
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Composition"
    ],
    "invariants": [
      "read_count >= 0",
      "mean_read_length >= 0",
      "max_read_length >= mean_read_length (warn)",
      "distinct_lengths >= 0"
    ],
    "notes": "Read-length profiling emits deterministic histogram artifacts and summary statistics without mutating reads."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly",
    "possible_kinds": [
      "StatsOnly"
    ]
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.profile_read_lengths",
  "tool_ids": [
    "seqkit_stats",
    "seqfu",
    "prinseq",
    "fastp"
  ]
}
